hphp/test/zend/bad/ext/dom/tests/DOMDocument_loadHTMLfile_error2.php
<?php
$doc = new DOMDocument();
$result = $doc->loadHTMLFile("");
assert('$result === false');
?>
